@@ -121,7 +121,7 @@ Admin.prototype.command = function(command, callback) {
   // Execute a command
   this.db.executeDbAdminCommand(command, function(err, result) {    
     // Ensure change before event loop executes
-    return callback(err, result);
+    return callback != null ? callback(err, result) : null;
   });
 }
 
