@@ -39,6 +39,7 @@ var Db = exports.Db = function(databaseName, serverConfig, options) {
   this.pkFactory = this.options.pk == null ? this.bson_serializer.ObjectID : this.options.pk;  
   this.forceServerObjectId = this.options.forceServerObjectId != null ? this.options.forceServerObjectId : false;
   // Added strict
+  this.operationTimeout = this.options.operationTimeout == null ? 1000 :  parseInt(this.options.operationTimeout);
   this.strict = this.options.strict == null ? false : this.options.strict;
   this.notReplied ={};
   this.isInitializing = true;
@@ -635,13 +636,16 @@ Db.prototype.executeCommand = function(db_command, options, callback) {
       errorCommand = DbCommand.createGetLastErrorCommand(safe, this);
     }
     
+    // Contains the command we need to listen to
+    var listenToCommand = null;
+    
     // If we have a callback execute
     if(callback instanceof Function) {
-      var listenToCommand = errorCommand != null ? errorCommand : db_command;      
+      listenToCommand = errorCommand != null ? errorCommand : db_command;      
       // Add the callback to the list of callbacks by the request id (mapping outgoing messages to correct callbacks)
       this.on(listenToCommand.getRequestId().toString(), callback);    
       if(self.serverConfig.primary != null) {
-	      this.notReplied[listenToCommand.getRequestId().toString()] = self.serverConfig.primary;
+	      this.notReplied[listenToCommand.getRequestId().toString()] = new Date().getTime();
 	    }   
     }
 
@@ -713,13 +717,18 @@ Db.prototype.executeCommand = function(db_command, options, callback) {
         self.serverConfig.disconnect();
       }
       
+      if(err == 'notConnected') {
+        delete self.notReplied[listenToCommand.getRequestId().toString()];
+        return callback(new Error(err), null);
+      }
+
       // Signal an error
       if(!(err instanceof Error)) err = new Error(err);
       if(callback instanceof Function) {
         if(errorCommand != null) delete self.notReplied[errorCommand.getRequestId().toString()];
         return callback(err, null);
       }
-
+      
       // Return error object
       return err;        
     }
