@@ -143,23 +143,24 @@ var tests = testCase({
   //map/reduce inline option test
   shouldPerformMapReduceFunctionInline : function(test) {
     // Parse version of server if available
-    var version = client.version != null ? parseInt(client.version.replace(/\./g, '')) : 0;
-    if(version >= 176) {
-      client.createCollection('test_map_reduce_functions_inline', function(err, collection) {
-        collection.insert([{'user_id':1}, {'user_id':2}], {safe:true}, function(err, r) {
-          // String functions
-          var map = function() { emit(this.user_id, 1); };
-          var reduce = function(k,vals) { return 1; };
+    client.admin().serverInfo(function(err, result){
+      if(parseInt((result.version.replace(/\./g, ''))) >= 176) {
+        client.createCollection('test_map_reduce_functions_inline', function(err, collection) {
+          collection.insert([{'user_id':1}, {'user_id':2}], {safe:true}, function(err, r) {
+            // String functions
+            var map = function() { emit(this.user_id, 1); };
+            var reduce = function(k,vals) { return 1; };
   
-          collection.mapReduce(map, reduce, {out : {inline: 1}}, function(err, results) {
-            test.equal(2, results.length);
-            test.done();
-          });          
-        });
-      });      
-    } else {
-      test.done();
-    }
+            collection.mapReduce(map, reduce, {out : {inline: 1}}, function(err, results) {
+              test.equal(2, results.length);
+              test.done();
+            });          
+          });
+        });      
+      } else {
+        test.done();
+      }
+    });
   },
   
   // Mapreduce different test
